<resources>
    <string name="app_name">Axone</string>
    <string name="is_polar">Polar grid</string>
    <string name="x_log">X logarithmic</string>
    <string name="y_log">Y logarithmic</string>
    <string name="input">Input</string>
    <string name="zoom">Zoom</string>
    <string name="x">Δx</string>
    <string name="y">Δy</string>
    <string name="text_tutorial">Input - Section for inputing the formula for graph.\nX logarithmic - Switching between logarithm along the X-axis and normal X-axis.\nY logarithmic - Switching between logarithm along the Y-axis and normal Y-axis.\nTutorial - Section with short explanation of buttons and list of functions and constants.\n\nFields in the section "Input":\nZoom - the scale of the graph.\nΔx - shifting along the X-axis.\nΔy - shifting along the Y-axis.\nColor - color of the graph.\nThickness - thickness of the graph.\nText field below Color, Thickness - the formula input.\nSpace above text fields - displaying the formula.\n\nFormula type:\nFunction. Graph of the function y=f(x). Example: ln(x^2+1)\nInverse function. Graph of the function x=f(y). Example: x=sin(y)\n\nList of functions:\n\n[1] - This is hard to find these functins in google. https://mizugadro.mydns.jp/t/index.php/Tetration\n[2] - Function can be applied only for integer values of the argument x. For graphing x is rounding the nearest integer.\n[3] - In this programm you can\'t wirte X factorial as "x!".\n\na+b\na-b\na*b\na/b\na^b\npow(a,b)\n()\n\\left( \\right)\nsgn(x)\nsign(x)\nmod(x,y)\nsqrt(x)\ncbrt(x)\nsin(x)\ncos(x)\ntan(x)\ntg(x)\ncot(x)\nctg(x)\nsec(x)\ncsc(x)\ncosec(x)\nsinh(x)\nsh(x)\ncosh(x)\nch(x)\ntanh(x)\nth(x)\ncoth(x)\ncth(x)\nsech(x)\nsch(x)\ncsch(x)\nsinp(x)\ncosp(x)\ntanp(x)\ncotp(x)\nsecp(x)\ncscp(x)\narcsin(x)\nsin^{-1}(x)\narccos(x)\ncos^{-1}(x)\narctan(x)\narctg(x)\ntan^{-1}(x)\ntg^{-1}(x)\narccot(x)\narctg(x)\ncot^{-1}(x)\nctg^{-1}(x)\narcsec(x)\nsec^{-1}(x)\narccsc(x)\narccosecn(x)\ncsc^{-1}(x)\ncosec^{-1}(x)\narcsinh(x)\narsh(x)\nsinh^{-1}(x)\nsh^{-1}(x)\narccosh(x)\narch(x)\ncosh^{-1}(x)\nch^{-1}(x)\narctanh(x)\narth(x)\ntanh^{-1}(x)\nth^{-1}(x)\narccoth(x)\narcth(x)\ncoth^{-1}(x)\ncth^{-1}(x)\narcsech(x)\narsch(x)\nsech^{-1}(x)\nsch^{-1}(x)\narccsch(x)\narcsch(x)\ncsch^{-1}(x)\narcsinp(x)\nsinp^{-1}(x)\narccosp(x)\ncosp^{-1}(x)\narctanp(x)\ntanp^{-1}(x)\narccotp(x)\ncotp^{-1}(x)\narcsecp(x)\nsecp^{-1}(x)\narccscp(x)\ncscp^{-1}(x)\nexp(x)\nln(x)\nlog(base,x)\nGamma(x)\nfact(x) [3]\nfactorial(x)\nnCr(n,r)\nnPr(n,r)\nmean(a,b,c,...)\nmax(a,b,c,...)\nmin(a,b,c,...)\nlcm(a,b,c,...)\ngcd(a,b,c,...)\nceil(x)\nfloor(x)\nround(x)\npsi(x) - THe digamma function\nrect(x)\nPi(x) - Same as rect(x)\ntri(x)\nabs(x)\nrandom() - random number from 0 to 1\nrandom(b) - random number from 0 to b\nrandom(a,b) - random number from a to b\nW(x)\nW_0(x)\nW_{0}(x)\nSuSin(x) - Sine Superfunction [1]\nzeta(x)\ntet_2(x) - Tetration base 2 [1]\ntet_{2}(x)\nerf(x)\ninvGamma(x)\narcGamma(x)\nGamma^{-1}(x)\npi_{prime}(x) - count of prime numbers less or equal to X. [2]\npi_{Prime}(x) [2]\nmu(x) - Mu Moebius function [2]\nP(x) - Prime zeta functon.\nsigma(x) - sum of divisors round(x). [2]\nsigma(x, z) - sum of divisors round(x), that have been raised to the power of Z. [2]\nisPrime(x) [2]\n1_p(x) [2]\n1_P(x) [2]\n1_{p}(x) [2]\n1_{P}(x) [2]\n1_{\mathbb{p}}(x) [2]\n1_{\mathbb{P}}(x) [2]\nomega(x) - Small omega function. [2]\nOmega(x) - Big omega function. [2]\nlambda(x) - Liouville lambda function. [2]\nphi_{euler}(x)\nphi_{Euler}(x)\ncollatzLen(x) - Lenght of Collatz sequence. [2]\ncollatzMax(x) - The lagrest number in absolute value in the Collatz sequence. [2]\nC(x) - Composite zeta function.\nxi(x) - Xi Riemann function.\ntheta_{Chebyshev}(x) [2]\nLambda(x) - Von Mangoldt function. [2]\npsi_{Chebyshev}(x) [2]\nB(x) - x-th Bernolli number.\nB(x,y) - Beta-functon.\nBeta(x,y)\nF(x) - x-th Fibonacci number.\nFibonacci(x)\nssqrt(x) - Square super-root - inverse funcion of x^x.\nsqsrt(x)\ntrunc(x) - integer part of X.\narcFact(x)\narcFactorial(x)\ninvFact(x)\ninvFactorial(x)\nFermi(x) - Fermi estimation in base-10. It was added after reading the first note: https://chtoes.li/paint-the-earth/\nFermi(x, base)\ndms(x) - Function from default Windows Calculator.\ndeg(x) - Function from default Windows Calculator.\nBernoulli(x) - x-th Bernolli number.\nbernoulli(x) - x-th Bernolli number.\ndigits(x) - Count of digits of X in base-10.\ndigits(x,base) - Count of digits of X in base-base.\nconcat(x,y) - Concatenation of two numbers. concat(123,456)=123456.\nconcat(x,y,base) - Concatenation of two numbers ib base-base.\nxexp(x)\nexpinf(x) - x^(x^(x^(x^(...))))\nexp^infty(x)\nexp^inf(x)\nexp^{inf}(x)\nexp^{infty}(x)\nharmonic(x) - x-th partial sum of Harmonic series.\nHarmonic(x)\nH(x)\nclamp(x,min_val,max_val) - If x&lt;min_val, then min_val, if x&gt;max_val, then max_val, else X.\nAuSin(x) - inverse funtion of SuperSine. [1]\nsin_{iter}(x,iterations) - nested iterations times sin(x). Note: iterations can be any number. [1]\ntet_E(x) - Tetration base E (~2.71828). [1]\ntet_{E}(x)\ntet_e(x)\ntet_{e}(x)\ntet(x) - Same as tet_E(x).\npen_E(x) - Pentation base E. [1]\npen_{E}(x)\npen_e(x)\npen_{e}(x)\npen(x) - Same as pen_E(x).\nslog_E(x) - Superlogarithm base E. Inverse function of tet_E(x). [1]\nslog_{E}(x)\nslog_e(x)\nslog_{e}(x)\nslog(x) - Same as slog_E(x).\nsln(x) - Same as slog_E(x).\nexp_{iter}(x,iterations) - nested iterations times E^x. Note: iterations can be any number. [1]\npen_2(x) - Pentation base 2. [1]\npen_{2}(x)\nSuFact(x)\nAuFact(x)\nfact_{iter}(x,iterations) - nested iterations times fact(x). Note: iterations can be any number. [1]\napen_E(x) - Inverse function of pen_E(x). [1]\napen_{E}(x)\napen_e(x)\napen_{e}(x)\napen(x) - Same as apen_E(x).\ntet_{iter}(x,iterations) - nested iterations times tet_E(x). Note: iterations can be any number. [1]\nsinc(x) - sin(x)/x\ncosc(x) - cos(x)/x\ntanc(x) - tan(x)/x\ncotc(x) - cot(x)/x\nsecc(x) - sec(x)/x\ncscc(x) - csc(x)/x\nsinhc(x) - sinh(x)/x\ncoshc(x) - cosh(x)/x\ntanhc(x) - tanh(x)/x\ncothc(x) - coth(x)/x\nsechc(x) - sech(x)/x\ncschc(x) - csch(x)/x\nsinpc(x) - sinp(x)/x\ncospc(x) - cosp(x)/x\ntanpc(x) - tanp(x)/x\ncotpc(x) - cotp(x)/x\nsecpc(x) - secp(x)/x\ncscpc(x) - cscp(x)/x\nerfc(x)\ntet_{e^1/e}(x) - Tetration base E^(1/E) (~1.44467). [1]\npen_{e^1/e}(x) - Pentation base E^(1/E) (~1.44467). [1]\nSuXexp(x) - Superfunction of xexp(x). [1]\nAuXexp(x) - Inverse of SuXexp(x).\nxexp_{iter}(x,iterations) - nested iterations times xexp(x). Note: iterations can be any number. [1]\nqrsqrt(x) - The algorithm from Quake III for fast calculating 1/sqrt(x), but with less accuracy.\nSi(x)\nCi(x)\n\n[1] - This is hard to find these functins in google. https://mizugadro.mydns.jp/t/index.php/Tetration\n[2] - Function can be applied only for integer values of the argument x. For graphing x is rounding the nearest integer.\n[3] - In this programm you can\'t wirte X factorial as "x!".\n\nList of cinstants:\npi - The number Pi (~3.14159)\nhpi - pi/2\nqpi - pi/4\ntau - pi*2\ne - The number E (~2.71828)\nphi - The number Phi (~1.61803)\nD - Dottie number - solution of equation cos(x)=x. (~0.73909)\n</string>
    <string name="tutorial">Tutorial</string>
    <string name="thick">Thickness</string>
    <string name="color">Color</string>
</resources>